fix validation bug

--- a/src/components/workbook/workbook-item/workbook-item.module.scss
+++ b/src/components/workbook/workbook-item/workbook-item.module.scss
@@ -29,12 +29,13 @@
                 padding: 10px 5px;
                 max-width: 150px;
             }
-
-
-        @media (max-width: 900px) {
-            display: flex;
-            flex-direction: column;
-        }
+            
+            & > tr{
+                @media (max-width: 900px) {
+                    display: flex;
+                    flex-direction: column;
+                }
+            }
         }
 
         &_header {
