--- a/src/components/login/login.module.scss
+++ b/src/components/login/login.module.scss
@@ -21,7 +21,7 @@
     }
 
     &_form {
-        padding: 50px;
+        padding: 50px 35px;
 
         &_button {
             width: 100%;
@@ -36,6 +36,7 @@
             & > svg {
                 width: 24px;
                 height: 24px;
+                margin-right: 5px;
             }
         }
     }
